Fix spacing

--- a/app/components/sections/work-experience/WorkExperience.module.scss
+++ b/app/components/sections/work-experience/WorkExperience.module.scss
@@ -1,13 +1,14 @@
 @import '../../../styles/global.scss';
 
 .section {
-    padding: 2rem 0 2rem 0;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     @include respond-to(md) {
-        padding-left: 0.8rem;
-        padding-right: 0.8rem;
+        padding: 2rem 0.5rem 2rem 0.5rem;
     }
+
+
 }
