--- a/app/components/sections/work-experience/job-card/JobCard.module.scss
+++ b/app/components/sections/work-experience/job-card/JobCard.module.scss
@@ -5,6 +5,7 @@
     padding: 1.5rem;
     border-radius: 0.375rem;
 
+
     .companyName {
         font-size: 2rem;
     }
@@ -17,7 +18,7 @@
 
     .jobDetails {
         font-size: 1rem;
-        font-family: $defaultCourier;
+        font-family: $defaultCalibri;
         margin: 0.5rem 0;
     }
 
